k8s-manifests/applications/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
  - name: http
    port: 8989
    targetPort: 8989
